--- a/backup/traits.ipynb
+++ b/backup/traits.ipynb
@@ -209,6 +209,29 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "abstract type Color end\n",
+    "struct Red <: Color end\n",
+    "struct Blue <: Color end\n",
+    "struct Green <: Color end\n",
+    "\n",
+    "statqualia(::Type{Color}) = Categorical()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "bounds([Red(), Blue(), Blue(), Green()])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "struct Measurement\n",
     "    x::Float64\n",
     "end\n",
