--- a/Day1/4_generic_programming.ipynb
+++ b/Day1/4_generic_programming.ipynb
@@ -220,9 +220,10 @@
    "metadata": {},
    "source": [
     "The possibility to write generic algorithms that compile to fast machine code in combination with multiple dispatch leads to an ([unreasonable](https://www.youtube.com/watch?v=kc9HwsxE1OY)) amount of code reuse. This sharing of code comes in two forms:\n",
-    "1. **Sharing generic algorithms** that work for different package-defined types implementing common abstractions.\n",
+    "1. **Sharing generic algorithms**\n",
     " * Examples: StatsBase.jl, SortingAlgorithms.jl, GenericLinearAlgebra.jl,\n",
-    "2. **Sharing types** among a wide variety of packages implementing different algorithms;\n",
+    " * **Methods are selected based on all argument types**\n",
+    "2. **Sharing types**\n",
     " * Examples: DataStructures.jl, OrderedCollections.jl, StaticArrays.jl, Colors.jl, Measurements.jl\n",
     " * **You can define methods on types after the type is defined!**"
    ]
