linalg remote gpu test

--- a/Day2/4_linear_algebra/1_linalg.ipynb
+++ b/Day2/4_linear_algebra/1_linalg.ipynb
@@ -74,10 +74,10 @@
      "data": {
       "text/plain": [
        "4×4 Array{Float64,2}:\n",
-       " 0.0577211  0.72521   0.725685  0.520986\n",
-       " 0.956414   0.742251  0.329625  0.292875\n",
-       " 0.763045   0.732923  0.943506  0.805203\n",
-       " 0.572385   0.405453  0.254844  0.99817 "
+       " 0.949379  0.42752   0.163062  0.783348\n",
+       " 0.390146  0.227762  0.176717  0.652798\n",
+       " 0.314086  0.174869  0.367592  0.545999\n",
+       " 0.531337  0.935468  0.188688  0.874276"
       ]
      },
      "execution_count": 2,
@@ -137,7 +137,7 @@
     {
      "data": {
       "text/plain": [
-       "-0.2664750708785965"
+       "-0.042912500091158434"
       ]
      },
      "execution_count": 5,
@@ -158,10 +158,10 @@
      "data": {
       "text/plain": [
        "4×4 Array{Float64,2}:\n",
-       " -1.33542    0.518623   0.893438  -0.175878\n",
-       "  1.89181    1.33517   -1.98053    0.218485\n",
-       " -0.495191  -0.946097   2.07961   -1.14152 \n",
-       "  0.123759  -0.59819   -0.238791   1.30538 "
+       "  2.09642    -2.13961   0.357313  -0.503942\n",
+       " -0.0205748  -2.40616   0.344686   1.59979 \n",
+       "  0.1152     -4.09568   4.59426    0.085726\n",
+       " -1.27694     4.75885  -1.57751   -0.280193"
       ]
      },
      "execution_count": 6,
@@ -209,10 +209,10 @@
      "data": {
       "text/plain": [
        "4-element Array{Float64,1}:\n",
-       " 0.3633784685763357  \n",
-       " 0.07789051096346689 \n",
-       " 0.037103826428047215\n",
-       " 0.4940901068128096  "
+       " 0.7231681266650631 \n",
+       " 0.40497216879899667\n",
+       " 0.3290748099880172 \n",
+       " 0.4454998350076822 "
       ]
      },
      "execution_count": 8,
@@ -272,7 +272,7 @@
     {
      "data": {
       "text/plain": [
-       "0.6193646508390104"
+       "0.9968625434263951"
       ]
      },
      "execution_count": 11,
@@ -316,10 +316,10 @@
      "data": {
       "text/plain": [
        "4-element Array{Float64,1}:\n",
-       " 0.132043911424883   \n",
-       " 0.006066931698149955\n",
-       " 0.001376693935602655\n",
-       " 0.24412503365029362 "
+       " 0.5229721394242568 \n",
+       " 0.16400245750176304\n",
+       " 0.10829023056864961\n",
+       " 0.19847010299187207"
       ]
      },
      "execution_count": 13,
@@ -347,7 +347,7 @@
      "data": {
       "text/plain": [
        "1×4 Transpose{Float64,Array{Float64,1}}:\n",
-       " 0.947254  0.203045  0.0967221  1.28799"
+       " 0.727727  0.407525  0.331149  0.448309"
       ]
      },
      "execution_count": 14,
@@ -403,10 +403,10 @@
      "data": {
       "text/plain": [
        "4×4 Array{Float64,2}:\n",
-       " 3.05772  3.72521  3.72569  3.52099\n",
-       " 3.95641  3.74225  3.32963  3.29288\n",
-       " 3.76304  3.73292  3.94351  3.8052 \n",
-       " 3.57239  3.40545  3.25484  3.99817"
+       " 3.94938  3.42752  3.16306  3.78335\n",
+       " 3.39015  3.22776  3.17672  3.6528 \n",
+       " 3.31409  3.17487  3.36759  3.546  \n",
+       " 3.53134  3.93547  3.18869  3.87428"
       ]
      },
      "execution_count": 16,
@@ -462,10 +462,10 @@
      "data": {
       "text/plain": [
        "4×4 Array{Float64,2}:\n",
-       " 3.05772   0.72521   0.725685  0.520986\n",
-       " 0.956414  3.74225   0.329625  0.292875\n",
-       " 0.763045  0.732923  3.94351   0.805203\n",
-       " 0.572385  0.405453  0.254844  3.99817 "
+       " 3.94938   0.42752   0.163062  0.783348\n",
+       " 0.390146  3.22776   0.176717  0.652798\n",
+       " 0.314086  0.174869  3.36759   0.545999\n",
+       " 0.531337  0.935468  0.188688  3.87428 "
       ]
      },
      "execution_count": 18,
@@ -508,7 +508,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -521,7 +521,7 @@
        " 0.0  0.0  0.0  1.0"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2279,6 +2279,65 @@
     "# 12.747 μs (19 allocations: 592 bytes)\n",
     "```"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 104,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "using BenchmarkTools\n",
+    "using Distributed\n",
+    "gpu = addprocs([(\"cbauer17@gpu2\", 1)]; exename=`/projects/ag-trebst/bauer/bin/julia-1.3.1/bin/julia --project=/projects/ag-trebst/bauer/JuliaOulu20`, dir=\"/projects/ag-trebst/bauer/JuliaOulu20\", tunnel=true)[1]\n",
+    "@fetchfrom gpu DEPOT_PATH[1] = \"/projects/ag-trebst/bauer/.julia\";\n",
+    "@fetchfrom gpu eval(Meta.parse(\"using CuArrays, BenchmarkTools\"));"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 116,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "      From worker 36:\tA*B (cpu)\n",
+      "      From worker 36:\tA*B (gpu)\n"
+     ]
+    }
+   ],
+   "source": [
+    "@fetchfrom gpu begin\n",
+    "    A, B = rand(1000,1000), rand(1000,1000);\n",
+    "    Agpu, Bgpu = CuArray(A), CuArray(B);\n",
+    "    println(\"A*B (cpu)\")\n",
+    "    @btime A*B;\n",
+    "\n",
+    "    println(\"A*B (gpu)\")\n",
+    "    @btime Agpu*Bgpu\n",
+    "end"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 101,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Task (done) @0x000000000fcd2e10"
+      ]
+     },
+     "execution_count": 101,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "rmprocs(workers())"
+   ]
   }
  ],
  "metadata": {
@@ -2287,7 +2346,7 @@
    "lastKernelId": null
   },
   "kernelspec": {
-   "display_name": "Julia 1.3.0",
+   "display_name": "Julia 1.3.1",
    "language": "julia",
    "name": "julia-1.3"
   },
@@ -2295,7 +2354,7 @@
    "file_extension": ".jl",
    "mimetype": "application/julia",
    "name": "julia",
-   "version": "1.3.0"
+   "version": "1.3.1"
   }
  },
  "nbformat": 4,
