--- a/backup/performance_exercise.ipynb
+++ b/backup/performance_exercise.ipynb
@@ -2,33 +2,38 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\u001b[32m\u001b[1mActivating\u001b[22m\u001b[39m new environment at `C:\\Users\\carsten\\Desktop\\Oulu2020\\backup\\Project.toml`\n"
+      "\u001b[32m\u001b[1mActivating\u001b[22m\u001b[39m environment at `~/Project.toml`\n"
      ]
     }
    ],
    "source": [
-    "] activate ."
+    "] activate ../"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 14,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "using BenchmarkTools"
+    "## Problem"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Optimize the following function."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -37,7 +42,7 @@
        "work (generic function with 1 method)"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -56,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -65,7 +70,7 @@
        "\u001b[32m\u001b[1mTest Passed\u001b[22m\u001b[39m"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -79,7 +84,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -88,7 +93,7 @@
        "opt1 (generic function with 1 method)"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -110,7 +115,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -119,7 +124,7 @@
        "opt12 (generic function with 1 method)"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -143,7 +148,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -152,7 +157,7 @@
        "opt2 (generic function with 1 method)"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -173,7 +178,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -182,7 +187,7 @@
        "opt22 (generic function with 1 method)"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -204,97 +209,166 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "More optimizations: blocking, tabling values of `val`..."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Single thread benchmarks"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "using BenchmarkTools\n",
+    "N = 4000\n",
+    "mat = zeros(N,N)\n",
+    "s = rand(N,N)\n",
+    "v = rand(Int, N);"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Performance: 8.832933179745996 MIt/s\n"
+     ]
+    }
+   ],
+   "source": [
+    "runtime = @belapsed work($mat, $s, $v, $N);\n",
+    "perf = N*N*1e-6/runtime # MIt/s\n",
+    "println(\"Performance: $perf MIt/s\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Performance: 18.954256315496306 MIt/s\n"
+     ]
+    }
+   ],
+   "source": [
+    "runtime = @belapsed opt1($mat, $s, $v, $N);\n",
+    "perf = N*N*1e-6/runtime # MIt/s\n",
+    "println(\"Performance: $perf MIt/s\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Performance: 18.667771913881896 MIt/s\n"
+     ]
+    }
+   ],
+   "source": [
+    "runtime = @belapsed opt12($mat, $s, $v, $N);\n",
+    "perf = N*N*1e-6/runtime # MIt/s\n",
+    "println(\"Performance: $perf MIt/s\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Performance: 39.56193729495743 MIt/s\n"
+     ]
+    }
+   ],
+   "source": [
+    "runtime = @belapsed opt2($mat, $s, $v, $N);\n",
+    "perf = N*N*1e-6/runtime # MIt/s\n",
+    "println(\"Performance: $perf MIt/s\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Performance: 641.2379740326675 MIt/s\n"
+     ]
+    }
+   ],
+   "source": [
+    "runtime = @belapsed opt22($mat, $s, $v, $N);\n",
+    "perf = N*N*1e-6/runtime # MIt/s\n",
+    "println(\"Performance: $perf MIt/s\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "24"
+       "52.957615277130884"
       ]
      },
-     "execution_count": 45,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# memory bound!\n",
-    "# s → 8 bytes\n",
-    "# mat → 8 + 8 bytes (write allocate)\n",
-    "B_c = 24 # bytes/it\n",
-    "# I = bs / B_c"
+    "641/21.47"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Multi-threading"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(32768, 262144, 6291456)"
+       "8"
       ]
      },
-     "execution_count": 38,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "cachesize()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 43,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# precalculate val (table)\n",
-    "# vtab(i) = -0.5*cos(2*i)\n",
-    "# IAND(v(i),255)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# reordering loops + allocate values\n",
-    "function opt_blocking(mat, s, v, N)\n",
-    "    val = Vector{Float64}(undef, length(v))\n",
-    "    @inbounds for i in eachindex(val)\n",
-    "        val[i] = -cos(2*mod(v[i],256));\n",
-    "    end\n",
-    "    \n",
-    "    Nblock = 2\n",
-    "    block_size = N/Nblock\n",
-    "    @inbounds for iblock in 1:Nblock\n",
-    "        for j in 1:N\n",
-    "            for i in 1:N/Nblock\n",
-    "                mat[i,j] = s[i,j]*val[i];\n",
-    "            end\n",
-    "        end\n",
-    "    end;\n",
-    "end"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 21,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "4"
-      ]
-     },
-     "execution_count": 21,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -306,20 +380,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "opt22_threaded (generic function with 1 method)"
+       "8"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
+   "source": [
+    "Base.Threads.nthreads()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "function opt22_threaded(mat, s, v, N)\n",
     "    val = Vector{Float64}(undef, length(v))\n",
@@ -338,142 +421,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "N = 4000\n",
-    "mat = zeros(N,N)\n",
-    "s = rand(N,N)\n",
-    "v = rand(Int, N);"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 24,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "opt22_threaded(mat, s, v, N);"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 25,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Performance: 20.388401573030933 MIt/s\n"
-     ]
-    }
-   ],
-   "source": [
-    "runtime = @belapsed work($mat, $s, $v, $N);\n",
-    "perf = N*N*1e-6/runtime # MIt/s\n",
-    "println(\"Performance: $perf MIt/s\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 26,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Performance: 78.76380212563812 MIt/s\n"
-     ]
-    }
-   ],
-   "source": [
-    "runtime = @belapsed opt1($mat, $s, $v, $N);\n",
-    "perf = N*N*1e-6/runtime # MIt/s\n",
-    "println(\"Performance: $perf MIt/s\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 27,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Performance: 71.90096720282318 MIt/s\n"
-     ]
-    }
-   ],
-   "source": [
-    "runtime = @belapsed opt12($mat, $s, $v, $N);\n",
-    "perf = N*N*1e-6/runtime # MIt/s\n",
-    "println(\"Performance: $perf MIt/s\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 28,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Performance: 56.04036307150225 MIt/s\n"
-     ]
-    }
-   ],
-   "source": [
-    "runtime = @belapsed opt2($mat, $s, $v, $N);\n",
-    "perf = N*N*1e-6/runtime # MIt/s\n",
-    "println(\"Performance: $perf MIt/s\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 29,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Performance: 1138.3282227139166 MIt/s\n"
-     ]
-    }
-   ],
-   "source": [
-    "runtime = @belapsed opt22($mat, $s, $v, $N);\n",
-    "perf = N*N*1e-6/runtime # MIt/s\n",
-    "println(\"Performance: $perf MIt/s\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 18,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "52.957615277130884"
-      ]
-     },
-     "execution_count": 18,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "1137/21.47"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 30,
    "metadata": {},
    "outputs": [
@@ -481,7 +428,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Performance: 1172.5993721170087 MIt/s\n"
+      "Performance: 1710.8674621986506 MIt/s\n"
      ]
     }
    ],
@@ -494,69 +441,44 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 93,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "86"
-      ]
-     },
-     "execution_count": 93,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
    "source": [
-    "emmy = 86"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "emmy_opt = 600"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "emmy_opt_threaded = 1.8 * 1e9"
+    "## Maximal performance?"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Multiple `N`"
+    "\"Roofline model\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 84,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Memory bounded performance: 2.08 GIt/s\n"
+     ]
+    }
+   ],
    "source": [
-    "using Plots\n",
-    "\n",
-    "runtime = @belapsed work($mat, $s, $v);\n",
-    "perf = N*N*1e-6/runtime # MIt/s\n",
-    "println(\"Performance: $perf MIt/s\")"
+    "bs = 50 # [GB/s] max memory bandwidth (only an estimate for the unknown CPU model)\n",
+    "traffic = 24 # [B/iter] in each iteration we have: LOAD s, LOAD + STORE mat, each contributing 8 B\n",
+    "println(\"Memory bounded performance: \", round(bs/traffic, digits=2), \" GIt/s\")"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Julia (4 threads) 1.3.1",
+   "display_name": "Julia 1.3.1",
    "language": "julia",
-   "name": "julia-(4-threads)-1.3"
+   "name": "julia-1.3"
   },
   "language_info": {
    "file_extension": ".jl",
