--- a/backup/performance_exercise.ipynb
+++ b/backup/performance_exercise.ipynb
@@ -2,14 +2,14 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\u001b[32m\u001b[1mActivating\u001b[22m\u001b[39m environment at `~/Project.toml`\n"
+      "\u001b[32m\u001b[1mActivating\u001b[22m\u001b[39m environment at `C:\\Users\\carsten\\Desktop\\Oulu2020\\Project.toml`\n"
      ]
     }
    ],
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -42,7 +42,7 @@
        "work (generic function with 1 method)"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -61,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -70,7 +70,7 @@
        "\u001b[32m\u001b[1mTest Passed\u001b[22m\u001b[39m"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -84,7 +84,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -93,7 +93,7 @@
        "opt1 (generic function with 1 method)"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -115,7 +115,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -124,7 +124,7 @@
        "opt12 (generic function with 1 method)"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -148,7 +148,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -157,7 +157,7 @@
        "opt2 (generic function with 1 method)"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -178,7 +178,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -187,7 +187,7 @@
        "opt22 (generic function with 1 method)"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -224,7 +224,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -237,14 +237,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Performance: 8.832933179745996 MIt/s\n"
+      "Performance: 18.881034356306554 MIt/s\n"
      ]
     }
    ],
@@ -256,14 +256,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Performance: 18.954256315496306 MIt/s\n"
+      "Performance: 78.34772483103824 MIt/s\n"
      ]
     }
    ],
@@ -275,14 +275,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Performance: 18.667771913881896 MIt/s\n"
+      "Performance: 72.13995511993042 MIt/s\n"
      ]
     }
    ],
@@ -294,14 +294,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Performance: 39.56193729495743 MIt/s\n"
+      "Performance: 56.743544712494646 MIt/s\n"
      ]
     }
    ],
@@ -313,14 +313,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Performance: 641.2379740326675 MIt/s\n"
+      "Performance: 1009.6803099718552 MIt/s\n"
      ]
     }
    ],
@@ -328,26 +328,6 @@
     "runtime = @belapsed opt22($mat, $s, $v, $N);\n",
     "perf = N*N*1e-6/runtime # MIt/s\n",
     "println(\"Performance: $perf MIt/s\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 29,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "52.957615277130884"
-      ]
-     },
-     "execution_count": 29,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "641/21.47"
    ]
   },
   {
@@ -359,16 +339,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "8"
+       "4"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -380,16 +360,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "8"
+       "4"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -400,9 +380,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "opt22_threaded (generic function with 1 method)"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "function opt22_threaded(mat, s, v, N)\n",
     "    val = Vector{Float64}(undef, length(v))\n",
@@ -421,14 +412,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Performance: 1710.8674621986506 MIt/s\n"
+      "Performance: 1075.5796365885303 MIt/s\n"
      ]
     }
    ],
@@ -456,19 +447,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Memory bounded performance: 2.08 GIt/s\n"
+      "Memory bounded performance: 1.21 GIt/s\n"
      ]
     }
    ],
    "source": [
-    "bs = 50 # [GB/s] max memory bandwidth (only an estimate for the unknown CPU model)\n",
+    "bs = 29 # [GB/s] max memory bandwidth (estimated from STREAM benchmark, 34 GB/s is the Intel value)\n",
     "traffic = 24 # [B/iter] in each iteration we have: LOAD s, LOAD + STORE mat, each contributing 8 B\n",
     "println(\"Memory bounded performance: \", round(bs/traffic, digits=2), \" GIt/s\")"
    ]
@@ -476,9 +467,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Julia 1.3.1",
+   "display_name": "Julia (4 threads) 1.3.1",
    "language": "julia",
-   "name": "julia-1.3"
+   "name": "julia-(4-threads)-1.3"
   },
   "language_info": {
    "file_extension": ".jl",
