ML update; using Flux 0.10.1

--- a/Day2/5_machine_learning/2_forward_mode_ad.ipynb
+++ b/Day2/5_machine_learning/2_forward_mode_ad.ipynb
@@ -317,6 +317,31 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "Even recursion works"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pow(x, n) = n <= 0 ? 1 : x*pow(x, n-1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "derivative(x -> pow(x,3), 2)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Taking derivatives of code: Babylonian sqrt"
    ]
   },
@@ -544,6 +569,42 @@
     "*Rule of thumb:*\n",
     "\n",
     "Forward mode is good for $\\mathbb{R} \\rightarrow \\mathbb{R}^n$ while reverse mode is good for $\\mathbb{R}^n \\rightarrow \\mathbb{R}$."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "using Zygote"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "f(x) = 5*x + 3"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "f'(10)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "gradient(f, 5)"
    ]
   },
   {
