--- a/backup/profiling/profiling.ipynb
+++ b/backup/profiling/profiling.ipynb
@@ -48,16 +48,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "myfunction (generic function with 1 method)"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "include(\"profiling.jl\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -130,18 +141,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# ] add ProfileView"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "# using ProfileView\n",
-    "\n",
-    "# ProfileView.view()"
+    "# @profview myfunction(10)"
    ]
   },
   {
