--- a/backup/traits.ipynb
+++ b/backup/traits.ipynb
@@ -296,10 +296,116 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## Example from Base: `IteratorSize`"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "?Base.IteratorSize"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "Base.IteratorSize(1:10)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "Base.IteratorSize(rand(2,3))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "@which Base.IteratorSize(rand(3))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Where is this trait utilized?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "BitArray(rand(Bool) for i in 1:3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "@which BitArray(rand(Bool) for i in 1:3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "Base.IteratorSize(rand(Bool) for i in 1:3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "BitArray(Iterators.repeated(1))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "Base.IteratorSize(Iterators.repeated(1))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "@which BitArray(Iterators.repeated(1))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "Resources:\n",
     "* \"Invented\" by Tim Holy in this [github issue](https://github.com/JuliaLang/julia/issues/2345#issuecomment-54537633).\n",
     "* See https://github.com/mauro3/Traits.jl#dispatch-on-traits for a detailed explanation and [SimpleTraits.jl](https://github.com/mauro3/SimpleTraits.jl) for a convenience implementation.\n",
-    "* The above is based on this blog post https://invenia.github.io/blog/2019/11/06/julialang-features-part-2/"
+    "* Based on these blog posts:\n",
+    " * https://invenia.github.io/blog/2019/11/06/julialang-features-part-2/\n",
+    " * https://ahsmart.com/pub/holy-traits-design-patterns-and-best-practice-book.html"
    ]
   }
  ],
